# tcs

./: .gitignore  .markdownlint.json  BOILERPLATE  EXCLUDE  IGNORE  Makefile  README.md  TODO  Worksheet.worksheet  a.tcl  addtopointingmodel.json  b.tcl  config.status  configure  configure.ac  foo.tcl  install-python3.6.sh  install-sh  svomalert  svomserver  svomvoevent.py  update-copyright.sh
tcs/: .tclint  Makefile.epilog.in  Makefile.in  Makefile.prolog.in  configure  configure-common.ac  configure.ac  configure.sh  install-astrometry.sh  install-packages-ddoti.sh  install-packages-macos.sh  install-packages-minnowboard.sh  install-packages-ubuntu-server-14.sh  install-packages-ubuntu14.sh  install-packages-ubuntu16.sh  install-packages-ubuntu18.sh  install-packages-ubuntu20.sh  install-packages-ubuntu24.sh  install-packages.sh  install-sh  rc.local  rc.local.in  sudoers  sudoers.in
tcs/autom4te.cache/: output.0  traces.0
tcs/blocks-coatlioan/: 0001-twilight-flats-evening-0  0002-biases-0  0002-biases-east-0  0002-biases-west-0  0003-darks-0  0003-darks-east-0  0003-darks-west-0  0013-gain  0013-gain-1  0013-read-noise  0013-readnoise-0  2017A-0000-ngc-2264  2017A-0010.sh  2017A-1000-0  2017A-1000-1001  2017A-1000-AT2018cow  2017A-1000-AT2018cow-std-1-0  2017A-1000-AT2018cow-std-2-0  2017A-1000-AT2018cow-std-3-0  2017A-1000-AT2018cow-std-4-0  2017A-1000-AT2018cow-std-5-0  2017A-1000-AT2018cow-std-6-0  2017A-1000-AT2018cow-std-7-0  2017A-1001-541934773  2017B-1001-17gkk  2018A-2000.sh  2019A-2000-0.sh  2019A-2000-2  2019A-2000-3  2019A-2001-0  2019B-1000-1  2019B-1002-0  2019B-1100-0  2019B-1100-1  2019B-1100-2  2021B-2000-fast-guiding-0  2021B-2001-costero-0  PROGRAMS  blocks.sh  correct-pointing-east-0  (+17 more)
tcs/blocks-colibri/: 0001-twilight-flats-evening-0.json  0012-bright-star-0.json  0014-focus-tilt-2.json  0018-scale-0.json  0019-hartmann-0.json  0019-hartmann-2.json  0019-hartmann-3.json  0019-hartmann-4.json  0019-hartmann-5.json  0019-hartmann-6.json  PROGRAMS  blocks-pointing-map.sh
tcs/blocks-colibricito/: 2019A-0001-twilight-flats-evening-0  2019A-0002-biases-0  2019A-0003-dark-west-0  focus.sh  manual-refocus  pointing-map.sh
tcs/blocks-colibricu/: 0003-darks-0  0004-initial-focus-00  0004-initial-focus-03  0004-initial-focus-04  0004-initial-focus-09  0004-initial-focus-11  0004-initial-focus-14  0004-initial-focus-15  0004-initial-focus-16  0004-initial-focus-18  0004-initial-focus-21  0004-initial-focus-23  2019B-1100-0  blocks.sh
tcs/blocks-colibriohp/: 0000-capella-1.json  0001-twilight-flats-evening-0.json  BLOCKS  PROGRAMS  (+15 more)
(+1227 files in other folders)
